--- a/src/Components/Menu.css
+++ b/src/Components/Menu.css
@@ -1,43 +1,45 @@
 .main-menu {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
 }
 
 .menu {
-    background-color: white;
-    text-align: left;
-    padding: 20px;
-    width: 50%;
     background-image: url('./Ellipse\ 2.png');
     background-repeat: no-repeat;
     background-size: 100% 100%;
-
+    padding: 2vw 5vw;
 }
 
 .logo {
     display: flex;
     flex-direction: row;
     column-gap: 30px;
-    justify-content: left;
     color: white;
-    padding: 20px 50px;
 }
 
 .menu-items {
-    margin: 50px;
-    margin-top: 30px;
-    margin-bottom: 100px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    padding: 40px 0;
 }
 
 .menu-item {
-    width: 90%;
-    height: 90%;
     display: flex;
+    width: 80%;
     flex-direction: row;
     justify-content: space-between;
-    color: white;
+    align-items: center;
     border-bottom: #FFEDED ridge 0.5px;
     border-color: #FFEDED;
+    color: white;
 }
 
 .menu-item span {
@@ -45,33 +47,34 @@
     font-size: 2.5vw;
 }
 
-.search input {
-    border-radius: 10px;
-    padding: 5px;
-    align-items: center;
-}
-
-.search img {
-    width: 15px;
-    height: 15px;
-    margin-left: -20px;
-    margin-top: 1px;
-}
-
-.menu-2 {
-    padding: 20px;
-    align-items: center;
-    width: 50%;
+.menu-1 {
+    padding: 1vw 5vw;
 }
 
 .menu-21 {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: end;
     align-items: center;
-    text-align: end;
-    width: 50%;
-    margin-left: 38%;
+    column-gap: 10vw;
+}
+
+.search {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.search input {
+    padding: 5px;
+    border-radius: 10px;
+    border: #FFEDED solid 0.5px;
+}
+
+#icon {
+    margin-left: -1.5vw;
+    color: maroon;
 }
 
 .links {
@@ -81,26 +84,51 @@
 }
 
 .links h1 {
+    margin-top: 0;
+    padding-bottom: 1vw;
     width: fit-content;
     border-bottom: solid 3px #FFCD29;
 }
 
+.contact {
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    align-items: center;
+    column-gap: 4vw;
+    margin-top: 10vh;
+}
+.contact h2{
+    margin: 0;
+    font-size: 1.5vw;
+    text-transform: uppercase;
+}
+.social-media {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+
+}
+.contact div{
+    display: flex;
+    justify-content: end;
+}
+.social-media p {
+    margin: 0;
+    margin-right: 3vw;
+    font-size: 1.5vw;
+    color: maroon;
+}
+
 .image-grid {
     display: grid;
-    grid-template-columns: auto auto;
-    gap: 10px;
-    width: 70%;
-    height: 65%;
-    margin-left: 12%;
-
-}
-
-.image-grid h1 {
-    margin-top: 25%;
-}
-
-.image-grid h2 {
-    margin-top: 30%;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 1vw;
+    column-gap: 1vw;
+    height: 60%;
+    width: 80%;
+    margin-left: 5vw;
 }
 
 .image1 {
@@ -108,57 +136,185 @@
     background-size: 100% 100%;
     background-color: black;
     border-radius: 50%;
-    align-items: center;
     color: white;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .image2 {
     background-image: url('./image\ 12\ \(1\).png');
+    background-size: 100% 100%;
     background-color: black;
+    border-radius: 50%;
     align-items: center;
     color: white;
-    border-radius: 50%;
-    background-size: 100% 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .image3 {
     background-image: url('./image\ 12\ \(2\).png');
+    background-size: 100% 100%;
     background-color: black;
+    border-radius: 50%;
     align-items: center;
     color: white;
-    border-radius: 50%;
-    background-size: 100% 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .image4 {
     background-image: url('./image\ 12\ \(3\).png');
     background-size: 100% 100%;
-    align-items: center;
-    color: white;
     background-color: black;
     border-radius: 50%;
-}
-
-.contact {
+    align-items: center;
+    color: white;
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 20px;
-    column-gap: 40px;
 }
+@media (min-width:992px) and (max-width:1199.98px){
+    .image-grid h2{
+        font-size: 1.8vw;
+    }
+    .social-media p{
+        font-size: 2vw;
+    }
+    .contact h2{
+        font-size: 1.5vw;
+    }
+    .menu{
+        padding-bottom: 5vw;
+    }
+}
+@media (min-width:768px) and (max-width:991.98px){
+    .image-grid{
+        margin-left: 0vw;
+        gap: 3vw;
+        width: 90%;
+        height: 50%;
+    }
+    .image-grid h2{
+        font-size: 1.8vw;
+    }
+    .social-media p{
+        font-size: 2vw;
+    }
+    .contact h2{
+        font-size: 1.5vw;
+    }
+    .links{
+        margin-left: 20%;
+    }
+    .menu{
+        padding-bottom: 6vw;
+    }
+}
+@media (min-width:576px) and (max-width:767.98px){
 
-.social-media {
+    .image-grid{
+    grid-template-columns: 1fr;
+    text-align: center;
+    width: 70%;
+    height: 70%;
+    margin-left: 3vw;
+    row-gap: 2vw;
+}
+.image-grid h2{
+    font-size: 3vw;
+}
+.logo{
+    font-size: 2vw;
+}
+.links{
+    margin-left: 0;
+    text-align: center;
+}
+.social-media p{
+    font-size: 3vw;
+}
+.contact h2{
+    font-size: 3vw;
+}
+.contact{
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    row-gap: 2vh;
+    margin-top: 2vh;
+    margin-left: 0;
 }
+.menu{
+    padding-bottom: 10vw;
+}
+.menu-21{
+    column-gap: 5vw;
+}
+.links h1{
+    margin: 0;
+    margin-bottom: 1vw;
+}
+}
+@media(max-width:575.98px){
 
-.social-media p {
-    margin-right: 30px;
-    color: maroon;
-    font-size: 20px;
-    border-radius: 50%;
+    .image-grid{
+    grid-template-columns: 1fr;
+    text-align: center;
+    width: 70%;
+    height: 70%;
+    margin-left: 3vw;
+    row-gap: 2vw;
+}
+.image-grid h2{
+    font-size: 3vw;
+}
+.logo{
+    font-size: 2vw;
+}
+.links{
+    margin-left: 0;
+    text-align: center;
+}
+.social-media p{
+    font-size: 3vw;
+}
+.contact h2{
+    font-size: 3vw;
+}
+.contact{
+    display: flex;
+    flex-direction: column;
+    row-gap: 2vh;
+    margin-top: 2vh;
+    margin-left: 0;
+}
+.menu{
+    padding-bottom: 10vw;
+}
+.menu-21{
+    column-gap: 5vw;
+    flex-direction: column;
+}
+.links h1{
+    margin: 0;
+    margin-bottom: 1vw;
+}
+.logo{
+    flex-direction: column;
+    font-size: 4vw;
+    justify-content: center;
+}
+.logo img{
+    width: 75%;
+    height: 75%;
+}
+.search input{
+    width: 100%;
+}
+#icon{
+    margin-left: -7vw;
+}
 }
